# city-heatmap-data

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  weekly-refresh.sh
.claude/: CLAUDE.md
data/: README.md  cli.py  overpass.py
fetcher/: README.md  __init__.py  cities.py  cli.py  config.py  duckdb_io.py  geo.py  http.py
fetcher/providers/: __init__.py  boundary.py  geoapify.py  overpass.py  overture.py  pharmacies.py  transit.py  transit_lines.py  tree_species_en.py  trees.py
fetcher/providers/sirene/: __init__.py  datagouv.py  naf.py  provider.py
fetcher/transform/: __init__.py  aggregate.py  clip.py  geojson_io.py
