[project]
name = "city-heatmap-data"
version = "0.1.0"
description = "Weekly data-refresh worker for city-heatmap: fetches store + boundary GeoJSON from Overpass / OSM (+ Overture)."
requires-python = ">=3.11"
# Food + boundary datasets are stdlib-only. duckdb is needed only for the
# fitness Overture merge; install it with the "fitness" extra, or pass
# --no-overture to fall back to OSM-only fitness data.
dependencies = []

[project.optional-dependencies]
fitness = ["duckdb"]

[project.scripts]
city-heatmap-fetch = "fetcher.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fetcher*"]
